# 6303_piaa_lab5

./: CMakeLists.txt  README.md
src/: kmp.cpp  kmp.h  lab5.cpp  sycl.cpp
test/: CyclicShiftTest.cpp  Kmptest.cpp  Prefixtest.cpp
